--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         
-        <label for="background">Background color::</label>
+        <label for="background">Background color:</label>
             <input id="background" value="blue">Blue</input>          
             <input id="background" value="red">Red</input> 
             <input id="background" value="green">Green</input> 
