--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8"/>
     </head>
     <body>
+      <div id="menu"> 
         <label for="background">Background color:</label>
             <select id="background">
               <option value="blue">Blue</option> 
@@ -12,17 +13,18 @@
               <option value="green">Green</option> 
             </select>
         <label for="width">Width:</label>
-            <select id="width">
-              <option value="300px">300</option>
-              <option value="400px">400</option>
-              <option value="500px">500</option>
-             </select>
-        <label for="height">Height:</label>
-            <select id="height">
+           <select id="width">
               <option value="300px">300</option>
               <option value="400px">400</option>
               <option value="500px">500</option>
             </select>
+        <label for="height">Height:</label>
+           <select id="height">
+              <option value="300px">300</option>
+              <option value="400px">400</option>
+              <option value="500px">500</option>
+             </select>
+         </div>
        <div id="content" style="background:blue; width:300px; height:300px;"></div>
        <script src="script.js"></script> 
     </body>
