--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
     <body>
       <div id="menu"> 
         <label for="background">Background color:</label>
-            <select id="background">
+            <select color id="background">
               <option value="blue">Blue</option> 
               <option value="red">Red</option> 
               <option value="green">Green</option> 
             </select>
         <label for="width">Width:</label>
-           <select id="width">
+           <select value id="width">
               <option value="300px">300</option>
               <option value="400px">400</option>
               <option value="500px">500</option>
             </select>
         <label for="height">Height:</label>
-           <select id="height">
+           <select value id="height">
               <option value="300px">300</option>
               <option value="400px">400</option>
               <option value="500px">500</option>
