--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
             <input id="background" type="color" value="blue">
             </input>
         <label for="width">Width:</label>
-           <input id="width" type="number" value="300px" data-unit="px">
+           <input id="width" type="number" value="300" data-unit="px">
             </input>
         <label for="height">Height:</label>
-           <input id="height" type="number" value="300px" data-unit="px">
+           <input id="height" type="number" value="300" data-unit="px">
              </input>
          </div>
        <div id="content" style="background:blue; width:300px; height:300px;"></div>
