--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
       <div id="menu"> 
         <label type for="background">Background color:</label>
-            <input id="background" type="color" value="blue">
+            <input id="background" type="color" name="blue">
             </input>
         <label for="width">Width:</label>
            <input id="width" type="number" value="300" data-unit="px">
