--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
       <div id="menu"> 
         <label type for="background">Background color:</label>
-            <input id="background" type="color" name="blue">
+            <input id="background" type="color" value="#000000">
             </input>
         <label for="width">Width:</label>
            <input id="width" type="number" value="300" data-unit="px">
@@ -16,7 +16,7 @@
            <input id="height" type="number" value="300" data-unit="px">
              </input>
          </div>
-       <div id="content" style="background:blue; width:300px; height:300px;"></div>
+       <div id="content" style="background:#148282; width:300px; height:300px;"></div>
        <script src="script.js"></script> 
     </body>
 </html>
